@@ -17,6 +17,10 @@ anoop.kumar.narayanan@gmail.com
 
 LICENSE
 -------
+GPLv2/GPLv3/MIT/BSD 3-clause
+
+
+For:
 PROPRIETARY LICENSE
 Contact through mail for purchase
 
@@ -31,6 +35,9 @@ Features:
 6. Supports Multithreads for plugin execution, thread pool for dynamic page handling (configurable)
 7. Supports Chunked data transfer for dynamic pages.
 8. Supports GET and POST queries
+9. Supports SSL through redirect lighttpd <---- redirect ---> httpd (>= 0.24.1) as of now. (Should SSL reinventing the wheel happen ?)
+10. Supports Large file upload through POST multipart (>= 5.0GB)
+11. Supports CppThreads (-DUSE_CPP11THREAD) and Pthreads ( -DUSE_PTHREAD)
 
 
 COMPILE:
@@ -52,6 +59,25 @@ sthtml are static html documents that can be served as common html documents bet
 html documents have a suffix "username_", these documents gets served only to appropriate users.   
 images like jpg, bmp and png are common files.   
 Pages/router/ folder contains sample embedded router html documents without backend interface.   
+login.html and public.html are the only two pages that return as themselves.
+
+
+
+PAGE MAPPING:
+--------------
+when logged in as root
+root.html -> root_root.html
+image.jpg -> image.jpg
+index.sthtml -> index.sthtml
+login.xyz    -> plugin liblogin.so dynamic page
+p3.xyz       -> plugin libp3.so dynamic page
+
+When logged in as super
+root.html -> super_root.html
+image.jpg -> image.jpg
+index.sthtml -> index.sthtml
+login.xyz    -> plugin liblogin.so dynamic page
+p3.xyz       -> plugin libp3.so dynamic page
 
 
 Test and Execution:
